--- a/find-parking-spaces/package.json
+++ b/find-parking-spaces/package.json
@@ -10,7 +10,6 @@
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "babel-plugin-named-asset-import": "^0.2.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-app": "^6.0.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -117,11 +116,13 @@
       "react-app"
     ],
     "plugins": [
-      "transform-decorators-legacy"
+      ["@babel/plugin-proposal-decorators", { "legacy": true }]
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2"
+  }
 }
