--- a/find-parking-spaces/package.json
+++ b/find-parking-spaces/package.json
@@ -37,6 +37,7 @@
     "mini-css-extract-plugin": "0.4.3",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
+    "onsenui": "^2.10.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -47,6 +48,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.0",
     "react-dom": "^16.6.0",
+    "react-onsenui": "^1.11.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
@@ -116,7 +118,12 @@
       "react-app"
     ],
     "plugins": [
-      ["@babel/plugin-proposal-decorators", { "legacy": true }]
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
     ]
   },
   "eslintConfig": {
